@@ -26,6 +26,7 @@ doc:
 	@pydoc3 -w nmap/nmap.py
 
 web:
+	@echo $(VERSION) > web/python-nmap_CURRENT_VERSION.txt
 	@cp dist/$(ARCHIVE).tar.gz web/
 	@md5sum web/$(ARCHIVE).tar.gz > LAST_MD5
 	@emacsclient -a /usr/bin/emacs22 LAST_MD5 web/index.gtm
